# MCPower-gui

./: .gitignore  CHANGELOG.md  README.md  mcpower-gui.spec  pyproject.toml
.github/workflows/: build.yml  test.yml
mcpower_gui/: __init__.py  __main__.py  _resources.py  acknowledgments.txt  app.py  history_manager.py  icon.icns  pl.freestylerscientist.mcpower.desktop  script_generator.py  state.py  theme.py  tips.yaml  update_checker.py  worker.py
mcpower_gui/docs/: analysis_tab.md  anova_factors.md  citation.md  cluster_config.md  common_settings.md  correlations.md  data_preparation.md  effect_sizes.md  find_power.md  find_sample_size.md  general_settings.md  input_mode.md  key_concepts.md  mixed_models_guide.md  model_formula.md  model_tab.md  overview.md  post_hoc.md  results.md  results_tab.md  scenario_settings.md  settings.md  use_your_data.md  variable_types.md
mcpower_gui/tabs/: analysis_tab.py  model_tab.py  results_tab.py
mcpower_gui/widgets/: acknowledgments_dialog.py  anova_factor_editor.py  cluster_editor.py  correlation_editor.py  documentation_dialog.py  effects_editor.py  flow_layout.py  formula_input.py  history_dialog.py  info_button.py  post_hoc_selector.py  power_bar_chart.py  power_curve_plot.py  progress_dialog.py  result_panel.py  results_table.py  settings_dialog.py  spin_boxes.py  target_test_selector.py  tip_engine.py  tutorial_guide.py  update_banner.py  variable_type_editor.py
tests/: cars.csv  conftest.py  test_analysis_tab.py  test_cluster_editor.py  test_correlation_editor.py  test_factor_autonaming.py  test_flow_layout.py  test_formula_input.py  test_history_manager.py  test_info_button.py  test_mixed_model_integration.py  test_post_hoc_selector.py  test_resources.py  test_results_tab.py  test_results_table.py  test_script_generator.py  test_smoke.py  test_spin_boxes.py  test_state.py  test_target_test_selector.py  test_theme.py  test_tip_engine.py  test_tips_yaml.py  test_update_banner.py  test_update_checker.py  test_worker.py
